<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accountLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/coursesTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Courses"
        app:layout_constraintBottom_toBottomOf="@+id/coursesET"
        app:layout_constraintEnd_toStartOf="@+id/coursesET"
        app:layout_constraintStart_toStartOf="@+id/emailTV"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accountRecycle"
        android:layout_width="355dp"
        android:layout_height="416dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameTV"
        app:layout_constraintTop_toBottomOf="@+id/questionAC" />

    <EditText
        android:id="@+id/usernameET"
        android:layout_width="202dp"
        android:layout_height="57dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/usernameTV"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <TextView
        android:id="@+id/usernameTV"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="Username"
        app:layout_constraintBottom_toBottomOf="@+id/usernameET"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/usernameET"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="@+id/usernameET"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/usernameET"
        app:layout_constraintTop_toTopOf="@+id/usernameET"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/emailTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Email"
        app:layout_constraintBottom_toBottomOf="@+id/emailET"
        app:layout_constraintEnd_toStartOf="@+id/emailET"
        app:layout_constraintStart_toStartOf="@+id/usernameTV"
        app:layout_constraintTop_toTopOf="@+id/emailET" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/usernameET"
        app:layout_constraintStart_toStartOf="@+id/usernameET"
        app:layout_constraintTop_toBottomOf="@+id/usernameET" />

    <EditText
        android:id="@+id/coursesET"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="@+id/emailET"
        app:layout_constraintStart_toEndOf="@+id/emailTV"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <Button
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="@+id/emailET"
        app:layout_constraintEnd_toEndOf="@+id/edit_username"
        app:layout_constraintStart_toEndOf="@+id/emailET"
        app:layout_constraintTop_toTopOf="@+id/emailET"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/edit_courses"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="Edit"
        app:layout_constraintBottom_toBottomOf="@+id/coursesET"
        app:layout_constraintEnd_toEndOf="@+id/edit_email"
        app:layout_constraintStart_toEndOf="@+id/coursesET"
        app:layout_constraintTop_toBottomOf="@+id/emailET" />

    <TextView
        android:id="@+id/questionAC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Questions:"
        app:layout_constraintEnd_toEndOf="@+id/edit_courses"
        app:layout_constraintStart_toStartOf="@+id/coursesTV"
        app:layout_constraintTop_toBottomOf="@+id/coursesET" />

    <Button
        android:id="@+id/saveAC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Apply Changes"
        app:layout_constraintBottom_toTopOf="@+id/edit_username"
        app:layout_constraintEnd_toEndOf="@+id/edit_username"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Logout"
        app:layout_constraintBottom_toTopOf="@+id/usernameTV"
        app:layout_constraintEnd_toStartOf="@+id/usernameET"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernameTV" />

</androidx.constraintlayout.widget.ConstraintLayout>